--- a/4-rapper_dashboard/views/add.ejs
+++ b/4-rapper_dashboard/views/add.ejs
@@ -24,6 +24,7 @@
         <div>Number of Singles<input type=number name=amtOfHits min=1 class=input-sm></div>
         <div>Top Album<input type=text name=topAlbum class=input-sm></div>
         <div>Date Released<input type=date name=releaseDate class=input-sm></div>
+        <input type=hidden name=votes value=0>
         </section>
     <footer class=text-center>
         <input type=submit value='Add Rapper'>
