--- a/8-login_registration/client/views/show.ejs
+++ b/8-login_registration/client/views/show.ejs
@@ -22,7 +22,7 @@
         <section>
         <table>
             <tr><td>Email: </td><td><%=user.email%></td></tr>
-            <tr><td>Birthday: </td><td><%=user.bday%></td></tr>
+            <tr><td>Birthday: </td><td><%=moment(user.bday).format('LL')%></td></tr>
             <tr><td>Age: </td><td><%=user.age%></td></tr>
         </table>
         </section>
