--- a/8-login_registration/client/views/edit.ejs
+++ b/8-login_registration/client/views/edit.ejs
@@ -9,37 +9,63 @@
 <body>
 
 <header class=text-center>
-    <h2>Rapper Dashboard</h2>
-    <p>Rank Your Rappers!</p>
+    <h2>User Site</h2>
+    <p>Login, Join, Show, Edit, Etc.</p>
 </header>
 <new-row>
-<col-4></col-4>
+<col-3></col-3>
 
-<col-4>
+<col-6>
     <article>
     <header><strong>Edit <%=user.fullName%></strong></header>
     <form action="/site/users/<%=user._id%>/edit" method=post>
+    <form-horizontal>
         <section>
-        <div><input type=text name=email class=input-sm value="<%=user.email%>"></div>
-        <div><input type=text name=firstName min=3 class=input-sm value="<%=user.firstName%>"></div>
-        <div><input type=text name=lastName min=3 class=input-sm value="<%=user.lastName%>"></div>
-        <div>Birthday<input type=date name=birthday class=input-sm value="<%=user.birthday%>"></div>
+        <div>
+            <form-label-3>Email</form-label-3>
+            <form-input-8><input type=text name=email value="<%=user.email%>"></form-input-8>
+        </div>
+        
+        <div>
+            <form-label-3>First Name</form-label-3>
+            <form-input-8><input type=text name=first minlength=3 value="<%=user.first%>"></form-input-8>
+        </div>
+        
+        <div>
+            <form-label-3>Last Name</form-label-3>
+            <form-input-8><input type=text name=last minlength=3 value="<%=user.last%>"></form-input-8>
+        </div>
+        
+        <div>
+            <form-label-3>Birthday</form-label-3>
+            <form-input-8><input type=date name=bday value="<%=user.bday%>"></form-input-8>
+        </div>
+        <!-- <div>
+            <form-label-3>Gender</form-label-3>
+            <form-input-8>
+                <select name=gender>
+                    <option value=Male>Male</option>
+                    <option value=Female>Female</option>
+                </select>
+            </form-input-8>
+        </div> -->
         </section>
     <footer class=text-center>
-        <input type=submit value='Edit <%=user.firstName%>'>
-        <a href="/site/users/<%=user._id%>/"><button-link>Go Back</button-link></a>
+        <input type=submit value='Submit Changes'>
+        <a href="/site/users/<%=user._id%>"><button-link>Go to User Page</button-link></a>
     </footer>
+    </form-horizontal>
     </form>
     </article>
-</col-4>
+</col-6>
 
 <col-3>
-    <% if(typeof(flashes.errors) != 'undefined'){ %>
+    <% if(flashes.length !== 0) { %>
     <alert-danger>
-    <strong>Please fix the following errors:</strong><br>
-    <% for(let x in flashes.errors){ %>
-        <%= flashes.errors[x].message %><br>
-    <% } %>
+        <strong>Please fix the following:</strong><br>
+        <% for(let flash of flashes.reverse()){ %>
+            - <%=flash%><br>
+        <% } %>
     </alert-danger>
     <% } %>
 </col-3>
